configuring surefire jvm a bit more aggressively
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/trunk@1610780 13f79535-47bb-0310-9956-ffa450edef68